objects/CN_Document__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <formula>CN_Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account__c</fullName>
        <label>CN Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Document_Email_Subject__c</fullName>
        <formula>CN_Account__r.CN_Account_Email_Subject__c</formula>
        <label>Document Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business License</fullName>
                </value>
                <value>
                    <fullName>Fapiao Information</fullName>
                </value>
                <value>
                    <fullName>Hygiene Certificate</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>New Address Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Finance_MDM_Email__c</fullName>
        <label>Finance MDM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Is_File_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Parent_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + CN_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Uploaded_Status_Business_License__c</fullName>
        <formula>IF(CN_Account__r.CN_Require_Business_License__c = TRUE, IF (CN_Account__r.CN_Upload_Business_License__c  = TRUE, &quot;已提交/Submitted&quot;, &quot;待提交/Pending Submission&quot;), &quot;不需要/Not Required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uploaded Status Business License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Uploaded_Status_Contract__c</fullName>
        <formula>IF(CN_Account__r.CN_Require_Contract__c = TRUE, IF( CN_Account__r.CN_Upload_Contract__c= TRUE, &quot;已提交/Submitted&quot;, &quot;待提交/Pending Submission&quot;), &quot;不需要/Not Required&quot;)</formula>
        <label>Uploaded Status Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Uploaded_Status_Fapiao__c</fullName>
        <formula>IF(CN_Account__r.CN_Require_Bank_Information_FaPiao__c = TRUE, IF( CN_Account__r.CN_Upload_Bank_Information_FaPiao__c = TRUE, &quot;已提交/Submitted&quot;, &quot;待提交/Pending Submission&quot;), &quot;不需要/Not Required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uploaded Status Fapiao</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Uploaded_Status_Hygiene_Certificate__c</fullName>
        <formula>IF(CN_Account__r.CN_Require_Hygiene_Certificate__c= TRUE, IF( CN_Account__r.CN_Upload_Hygiene_Certificate__c = TRUE, &quot;已提交/Submitted&quot;, &quot;待提交/Pending Submission&quot;), &quot;不需要/Not Required&quot;)</formula>
        <label>Uploaded Status Hygiene Certificate</label>
        <type>Text</type>
    </fields>
    <label>Document</label>
    <nameField>
        <displayFormat>D-{000000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <recordTypes>
        <fullName>CN_Document</fullName>
        <active>true</active>
        <label>CN Document</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>